src/objects/Signature__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Footer__c</fullName>
        <label>Signature Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Signature_Header_New__c</fullName>
        <label>Signature Header New</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Signature_Header__c</fullName>
        <label>Signature Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <label>Signature</label>
    <nameField>
        <label>Signature Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Signatures</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>